[gd_scene load_steps=16 format=2]

[ext_resource path="res://GameNodes/ControlsGUI/Controls.gd" type="Script" id=1]
[ext_resource path="res://GameNodes/ControlsGUI/Controller Pack-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Squarebit2Px.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://GameNodes/ControlsGUI/just_released2.png" type="Texture" id=4]
[ext_resource path="res://GameNodes/ControlsGUI/just_released1.png" type="Texture" id=5]
[ext_resource path="res://GameNodes/ControlsGUI/JustReleased.gd" type="Script" id=6]
[ext_resource path="res://GameNodes/ControlsGUI/just_pressed2.png" type="Texture" id=7]
[ext_resource path="res://GameNodes/ControlsGUI/just_pressed1.png" type="Texture" id=8]
[ext_resource path="res://GameNodes/ControlsGUI/JustPressed.gd" type="Script" id=9]
[ext_resource path="res://GameNodes/ControlsGUI/pressed2.png" type="Texture" id=10]
[ext_resource path="res://GameNodes/ControlsGUI/pressed1.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]

size = 36
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "active",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "active",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": false,
"name": "active",
"speed": 5.0
} ]

[node name="GUi" type="CanvasLayer"]
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="Background" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -75.0
color = Color( 0.223529, 0.235294, 0.305882, 1 )

[node name="Controls" type="Node2D" parent="."]
position = Vector2( 193, 173 )
script = ExtResource( 1 )

[node name="Rest" type="Node2D" parent="Controls"]

[node name="Square" type="Sprite" parent="Controls/Rest"]
position = Vector2( 0, -6 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 267, 24, 11, 11 )

[node name="Square" type="Sprite" parent="Controls"]
visible = false
position = Vector2( 0, -7 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 781, 24, 9, 11 )

[node name="Shoot" type="Label" parent="Controls"]
margin_left = -60.3017
margin_top = -12.8168
margin_right = 29.6983
margin_bottom = 23.1832
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 1 )
text = "SHOOT"

[node name="Info" type="Label" parent="Controls"]
margin_left = 26.3247
margin_top = -15.012
margin_right = 363.325
margin_bottom = 98.988
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 1 )
text = "Press the \"space\" key
or 
the square button"
align = 1

[node name="ActionsVisualFeedback" type="Node2D" parent="."]

[node name="JustReleased" type="AnimatedSprite" parent="ActionsVisualFeedback"]
editor/display_folded = true
visible = false
position = Vector2( 270, 200 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="ActionsVisualFeedback/JustReleased"]
wait_time = 0.2
one_shot = true

[node name="JustPressed" type="AnimatedSprite" parent="ActionsVisualFeedback"]
editor/display_folded = true
visible = false
position = Vector2( 120, 200 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="ActionsVisualFeedback/JustPressed"]
wait_time = 0.2
one_shot = true

[node name="Pressed" type="AnimatedSprite" parent="ActionsVisualFeedback"]
position = Vector2( 194, 200 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 4 )

